@@ -20,6 +20,15 @@
 #######################################################################
 
 
+2014-09-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.999999999905 released.
+
+        * Fixed --VERSION or -V output for some Linux.
+
+        * Changed $returncode to $exitcode. 
+
+
 2014-09-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.999999999904 released.
